# SymulatorFizyki

./: CMakeLists.txt  Kolizja.cpp  Kolizja.h  Kolo.cpp  Kolo.h  Ksztalt.cpp  Ksztalt.h  Macierz22.cpp  Macierz22.h  Obiekt.cpp  Obiekt.h  README.md  Scena.cpp  Scena.h  Stale.h  Wektor.cpp  Wektor.h  Wielokat.cpp  Wielokat.h  main.cpp
